--- a/src/styles/components/grid.scss
+++ b/src/styles/components/grid.scss
@@ -34,9 +34,10 @@ ul.grid {
     }
 
     &:hover {
-      background-color: #f2f2f2;
-      color: #6C6C6C;
+      // background-color: #f2f2f2;
+      // color: #6C6C6C;
       cursor: pointer;
+      transform: scale(1.1);
     }
   }
 }
